# templates

./: template-adr.yaml  template-python.yaml
aws/ec2/content/: template.yaml
content-python/: Dockerfile  catalog-info.yaml  pyproject.toml  start.sh
content-python/src/adapters/external_resources/dm_proxy_api_cards/: DMCardProxyAPI.py
content-python/src/adapters/log/: LogBookProvider.py  LoguruProvider.py
content-python/src/api/: main.py  resources.py
content-python/src/api/V1/: router.py
content-python/src/api/V1/endpoints/: listcards.py
content-python/src/api/V1/exceptions/: ValidationException.py
content-python/src/api/V1/models/: CardListOutputModel.py  common.py
content-python/src/api/config/: handlers.py
content-python/src/domain/exceptions/: BaseException.py  ProposalExceptions.py
content-python/src/domain/models/proposal/: account_request.py
content-python/src/domain/ports/: cards_provider.py  logprovider.py  proposalRepository.py
content-python/src/domain/usecases/list_cards_use_case/: action.py  input.py  output.py
